# kyakhaoapi

./: .dockerignore  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  ADMIN_ACCESS_GUIDE.md  ALLERGIES_IMPLEMENTATION.md  DOCKER_SETUP.md  Dockerfile  ENVIRONMENT_SETUP.md  Makefile  Makefile.docker  POSTMAN_TEST_CHECKLIST.md  README.md  README_FASTAPI.md  alembic.ini  azure-pipeline-dev.yml  azure-pipeline-prod.yml  celery_worker.py  check_alembic_state.py  create_monetization_tables.py  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env  env.example  fix_alembic_version.py  main.py  policy_test_frontend.html  populate_account_data.py  pyproject.toml  pytest.ini  requirements.txt  requirements_old.txt  reset_and_seed.py  seed_data.py  seed_database.py  start_projects.py  (+2 more)
alembic/: env.py
alembic/versions/: 0996c802007f_add_unique_constraint_to_faq_question.py  0cbc8661522b_update_streaming_channels_with_category_.py  10fe6a765dc9_merge_heads.py  12370e613e98_initial_schema.py  16a6fa12d33c_initial_schema.py  1a1d5630f003_add_missing_fields_to_users_table.py  20251030_add_ad_slots_table.py  20251112_add_food_domain.py  227d71229ceb_add_duration_fields_to_episodes_seasons_.py  24276406a68d_merge_search_indexes.py  26a904270f97_add_job_title_to_content_cast.py  2dc0e43555de_add_user_watch_progress_table_for_.py  375aa9ab5134_initial_schema_after_merge.py  3a835eb4ccd8_initial_schema.py  404e71a4e9f1_add_food_tables.py  41e0ff51047d_add_cart_and_order_tables.py  4523fd1381f5_ini.py  48935f4b3a59_initial_schema_with_all_tables.py  4d79bac7d1bc_add_profile_id_to_user_content_.py  5089981dcce0_add_streaming_channels_table.py  51f06bc4f709_initial_schema.py  5f4ae2d3c1b0_add_listing_inquiries_table.py  61937bab565e_initial_schema.py  6497e1a2b872_add_password_reset_otp_table.py  6f096afd1a59_initial_schema.py  713b4303f20e_remove_unused_fields_from_streaming_.py  77afbce47b46_initial_migration_create_all_tables.py  80ed555ac3f1_add_user_favorites_table.py  873170d011e5_add_policies_table.py  88a8c71f4819_initial_schema.py  89be161b4482_add_faqs_table.py  9037d106b503_sync_current_schema.py  ac80946784d7_add_policies_table.py  add_faq_table.py  add_recommendation_engine_tables.py  add_search_indexes.py  b3d31ce38ba2_initial_schema.py  b4970b5c526b_add_description_field_to_policies.py  b96deb24fddd_add_moviesources_table.py  b9a12917d7b6_initial_migration.py  (+14 more)
app/ai/: __init__.py  ml_pipeline.py  recommendation_engine.py  training_script.py
app/api/: __init__.py
app/core/: __init__.py  admin_deps.py  auth.py  celery_app.py  config.py  constants.py  database.py  deps.py  messages.py  monetization_service.py  response_handler.py  transactions.py
app/middleware/: rate_limit.py
app/models/: __init__.py  announcement.py  cart.py  contact.py  content.py  faq.py  favorites.py  food.py  listing.py  listing_inquiry.py  membership.py  monetization.py  moviesource.py  notification.py  order.py  policy.py  popup.py  promotion.py  recommendation.py  rent_category.py  streaming.py  streaming_encryption.py  subscription.py  task.py  token.py  user.py  user_profile.py  user_settings.py  verification.py  watch_history.py  watch_progress.py
app/repositories/: __init__.py  base.py  cuisine_repository.py  dish_repository.py  restaurant_repository.py
app/schemas/: __init__.py  account.py  admin.py  admin_analytics.py  admin_schema.py  ai.py  allergy.py  auth.py  cart.py  contact.py  content.py  content_categories.py  continue_watching.py  cuisine.py  dish.py  faq.py  favorite.py  favorites.py  google_oauth.py  home_screen.py  listing.py  membership.py  menu.py  monetization.py  monetization_slots.py  mood.py  notification.py  pagination.py  personalization.py  policy.py  promotion.py  recently_watched.py  recommendation.py  recommendations.py  rent_category.py  rent_home.py  reservation.py  response.py  restaurant.py  review.py  (+12 more)
app/services/: __init__.py  base.py  cache_service.py  cuisine_service.py  dish_service.py  restaurant_service.py
app/tasks/: email_tasks.py
app/templates/: email_verification.html  password_reset.html  register_user.html
app/utils/: admin_utils.py  analytics_utils.py  auth.py  auth_utils.py  (+31 more)
django/: requirements.txt  start_django.py
fastapi/: .pre-commit-config.yaml  Makefile  main.py  requirements.txt  seed_database.py  start_fastapi.py
fixtures/: rent_categories_lahore.json
scripts/: load_fixture_listings.py  load_rent_categories.py  seed_database.py
static/: index.html  swagger-ui.html  test-subscription.html
tests/: __init__.py  conftest.py  simple_test.py  test_config.py  test_pagination_utils.py  test_rate_limit.py  test_retry_helper.py
(+1381 files in other folders)
